src/test/deca/codegen/valid/avecObjet/protected_field_access_subclass_object_of_subclass.deca
// Description :
//    Accès à un champ protected sur un objet de la sous-classe.
//
// Resultats :
//    (aucune sortie)


class A {
    protected int x;
}

class B extends A {
    void set(B b) {
        b.x = 4;
    }
}

{
}

