src/test/deca/codegen/invalid/avecObjet/invalid_cast.deca
// Description:
//    Tentative de cast invalide à l'exécution.
//
// Resultats:
//    Erreur : Cast invalide

class A {}
class B extends A {}
class C extends A {}

{
    A a = new B(); // Type dynamique B
    C c;
    
    // Contexte OK : C est sous-classe de A
    // Runtime KO : L'objet 'a' est un B, pas un C
    c = (C)(a); 
}